test_data/valid/1.2_two_bricks_side_by_side.ldr
0 Two bricks side by side
1 4 0 -24 0 1 0 0 0 1 0 0 0 1 3001.dat
1 15 80 -24 0 1 0 0 0 1 0 0 0 1 3001.dat