test_data/invalid/2.4_collision___partial_intersection.ldr
0 Collision - partial intersection
1 4 0 -24 0 1 0 0 0 1 0 0 0 1 3001.dat
1 15 10 -24 0 1 0 0 0 1 0 0 0 1 3001.dat